[gd_scene load_steps=16 format=2]

[ext_resource path="res://others/bullet/Bullet.gd" type="Script" id=1]
[ext_resource path="res://others/bullet/bullet-3.png" type="Texture" id=2]
[ext_resource path="res://others/bullet/bullet-1.png" type="Texture" id=3]
[ext_resource path="res://others/explosion/ex_1.png" type="Texture" id=5]
[ext_resource path="res://others/explosion/ex_2.png" type="Texture" id=6]
[ext_resource path="res://others/explosion/ex_7.png" type="Texture" id=7]
[ext_resource path="res://others/explosion/ex_4.png" type="Texture" id=8]
[ext_resource path="res://others/explosion/ex_5.png" type="Texture" id=9]
[ext_resource path="res://others/explosion/ex_3.png" type="Texture" id=10]
[ext_resource path="res://others/explosion/ex_6.png" type="Texture" id=11]

[sub_resource type="CapsuleShape2D" id=1]
radius = 5.0
height = 16.0

[sub_resource type="Animation" id=2]
resource_name = "Default"
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.02 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 3 ), ExtResource( 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.02 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "Explosion"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 5 ), ExtResource( 6 ), ExtResource( 10 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 11 ), ExtResource( 7 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.117188, 0.117188 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ null ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 6.82745, 8.35592 )

[node name="EnemyBullet" type="Area2D" groups=["bullets", "bullets_enemy"]]
collision_layer = 32
collision_mask = 19
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 2, 0 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 2, 0 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 2, 2.38419e-07 )
scale = Vector2( 1.3, 0.5 )

[node name="AnimationBullet" type="AnimationPlayer" parent="."]
anims/Default = SubResource( 2 )
anims/Explosion = SubResource( 3 )
anims/RESET = SubResource( 4 )

[node name="LeftDamageArea" type="Area2D" parent="." groups=["hitbox"]]
position = Vector2( -1, 53 )
scale = Vector2( 0.613333, 0.613334 )
collision_layer = 16
collision_mask = 17

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftDamageArea"]
position = Vector2( -9.78262, -86.4129 )
shape = SubResource( 5 )

[node name="RightDamageArea" type="Area2D" parent="." groups=["hitbox"]]
position = Vector2( -1, 53 )
scale = Vector2( 0.613333, 0.613334 )
collision_layer = 16
collision_mask = 17

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightDamageArea"]
position = Vector2( 19.2595, -86.2092 )
shape = SubResource( 5 )

[connection signal="body_entered" from="." to="." method="_on_Bullet_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="area_entered" from="LeftDamageArea" to="." method="_on_LeftDamageArea_area_entered"]
[connection signal="area_entered" from="RightDamageArea" to="." method="_on_RightDamageArea_area_entered"]
